# cpp-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  msys2.yml  windows.yml
gui/: CMakeLists.txt
gui/src/: main.cpp
header-only-lib/: CMakeLists.txt
header-only-lib/include/template/: header_only.h
lib/: CMakeLists.txt
lib/include/template/: test.h
lib/src/: test.cpp
test/: CMakeLists.txt
test/src/: basic_test.cpp
